# palletize

./: Cargo.toml  LICENSE  README.md
examples/: simple_pack.rs
src/: carton.rs  lib.rs  packerror.rs  pallet.rs  prelude.rs  prims.rs
tests/: carton_tests.rs  coords_tests.rs  dims_tests.rs  pack_tests.rs  pallet_tests.rs
