[package]
name = "palletize"
version = "0.1.0"
description = "A dirty but easy to use framework for 3D bin packing"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["orthogonal packing", "3d bin packing", "warehouse", "box packing"]
repository = "https://github.com/pixmusix/palletize"
edition = "2024"

[lib]
name = "palletize"
crate-type = ["lib"]

[dependencies]
rand = { version="0.10.0", features=["thread_rng"] }
thiserror = "2.0.18"
uom = "0.38.0"
